<?xml version="1.0"?>
<package format="2">
  <name>otomo_msgs</name>
  <version>0.1.0</version>
  <description>ROS versions of protobuf messages used for otomo</description>

  <url type="website">http://github.com/TWALL9/otomo-protobuf/</url>


  <maintainer email="thomaswallis0@gmail.com">tom</maintainer>
  <author email="thomaswallis0@gmail.com">tom</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
